[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/monsters/1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/Blipo.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/overlap/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/overlap/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://shaders/WhiteColorShader.shader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.94133
height = 9.5945

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.80877, 8.12246 )

[sub_resource type="CircleShape2D" id=8]
radius = 56.97

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.36781
height = 2.13303

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.29593
height = 17.7315

[sub_resource type="Animation" id=11]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Blipo" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 13 )
frames = SubResource( 5 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.0992126, 4.86142 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 7.62939e-06, 1.12246 )
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.133333 )
position = Vector2( -0.25, 0 )
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -3.8147e-06, 1.21737 )
shape = SubResource( 9 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0.0660849, 7.87178 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 11 )
anims/Stop = SubResource( 12 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invicibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invicibility_ended"]
[connection signal="invicibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invicibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
